<resources>
    <string name="app_name">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_movies">Movies</string>
    <string name="title_favourites">Favourites</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="success_message">Success</string>
    <string name="success_login_message">Successfully Logged In!</string>
    <string name="success_reg_message">Successfully Registered!</string>
    <string name="empty_input">Input email and password</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sign_up_label">Sign up</string>
    <string name="popular_label">Popular</string>
    <string name="toprated_label">Top Rated</string>
    <string name="recomended_label">Recomended</string>
    <string name="movie_title_label">Movie title</string>
    <string name="movie_overview_label">Movie overview</string>
    <string name="movie_poster_desc">Movie poster</string>
    <string name="genres_label">Genres</string>
    <string name="movies_label">Movies</string>
    <string name="favourites_label">Favourites</string>
    <string name="sign_out_label">Sign out</string>
    <string name="movie_images_label">Movie Images</string>
    <string name="upcoming_label">Upcoming</string>
    <string name="now_playing_label">Now Playing</string>
    <string name="movie_poster_label">Movie poster</string>
    <string name="name_label">Name</string>
    <string name="character_name_label">Character name</string>
    <string name="cast_label">Cast</string>
    <string name="similar_movies_label">Similar movies</string>
    <string name="profile_image_label">Profile image</string>
    <string name="add_to_favourites_label">Add to favourites</string>
    <string name="remove_label">Remove from favourites</string>
    <string name="video_label">Video name</string>
</resources>
