<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="?attr/backgroundcolor"
              android:orientation="vertical"
              android:layout_margin="10dp">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="120dp"
            tools:srcCompat="@tools:sample/avatars[1]"
            android:id="@+id/profile"
            android:contentDescription="@string/profile_image_label"/>
    <TextView
            android:text="@string/name_label"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_textview"
            android:textColor="@color/colorWhite"/>
    <TextView
            android:text="@string/character_name_label"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/character_name"
            android:textColor="@color/colorGrey"/>
</LinearLayout>