<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:background="?attr/backgroundcolor"
              android:layout_margin="10dp">

    <ImageView android:layout_width="150dp"
               android:layout_height="200dp"
               tools:srcCompat="@tools:sample/avatars"
               android:id="@+id/fav_movie_poster"
               android:contentDescription="@string/movie_poster_desc"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:text="@string/movie_title_label"
                  android:textColor="?attr/textcolor"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/fav_movie_title" />
        <TextView android:text="@string/movie_overview_label"
                  android:textColor="?attr/textcolor"
                  android:layout_width="match_parent"
                  android:layout_height="125dp"
                  android:id="@+id/fav_movie_overview" />
    </LinearLayout>

</LinearLayout>