<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.LoginFragment"
              android:orientation="vertical"
              android:gravity="center"
              android:background="?attr/backgroundcolor" >

    <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorGrey"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="?attr/textcolor" />

    <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorGrey"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="?attr/textcolor" />

    <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/sign_in_label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/sign_in_button_bg" />

    <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/sign_up_label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/sign_up_button_bg" />

</LinearLayout>
